--- a/criaturas.html
+++ b/criaturas.html
@@ -8,7 +8,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title> Criaturas não catalogadas </title>
+    <title> Site Site </title>
 
     <link rel="stylesheet" type="text/css" href="style.css">
 
